utilities/Sol/modules/grammars/ide/src/test/resources/cocos/invalid/Options.ide
package invalid

typedef configuration Options {
    label "Some Configuration"

    option someOption: Common {
        label "Some Label"
        required true
    }

    configuration sub: OptionsComponent {

    }

    backend task main
}
